crates/yuzu-render/tests/snapshots/render_snapshot__guide_html.snap
---
source: crates/yuzu-render/tests/render_snapshot.rs
expression: guide
---
<!DOCTYPE html>
<html lang="ja">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>はじめに | Fixture Docs</title>
<meta name="description" content="yuzu-render のテスト用サイト">
<meta name="generator" content="yuzu">
<meta property="og:type" content="website">
<meta property="og:site_name" content="Fixture Docs">
<meta property="og:title" content="はじめに">
<meta property="og:description" content="yuzu-render のテスト用サイト">
<meta name="twitter:card" content="summary">
<link rel="stylesheet" href="/docs/_assets/css/theme.css">
<link rel="stylesheet" href="/docs/_assets/css/syntect.css">
<script>
// FOUC 回避: CSS 適用前に、切替ボタンで保存した選択だけを反映する。
// 保存が無ければ data-theme を付けない = CSS の prefers-color-scheme が OS の設定に従う
// （JS 無効でも同じ見た目になり、OS 側の切替にもその場で追従する）
(function () {
  var stored = null;
  try { stored = localStorage.getItem("yuzu-theme"); } catch (e) {}
  if (stored === "dark" || stored === "light") document.documentElement.dataset.theme = stored;
})();
</script>
</head>
<body>
<a class="skip-link" href="#yuzu-main">本文へ移動</a>
<header class="site-header">
<div class="header-left">

<button id="nav-toggle" type="button" aria-label="ナビゲーションを開閉"
        aria-controls="site-sidebar" aria-expanded="false" hidden>☰</button>
<a class="site-title" href="/docs/">Fixture Docs</a>
</div>
<div class="header-tools">
<div class="search" id="yuzu-search">
<input type="search" id="yuzu-search-input" placeholder="検索 ( / )" autocomplete="off"
       role="combobox" aria-expanded="false" aria-controls="yuzu-search-results">
<div class="search-results" id="yuzu-search-results" role="listbox" hidden></div>
</div>
<button id="theme-toggle" type="button" aria-label="ダークモード切替" title="ダークモード切替">◐</button>
</div>
</header>
<div class="layout">



<aside class="sidebar" id="site-sidebar">
<nav class="sidebar-nav" aria-label="サイト内ナビゲーション">

<ul>

<li>
<a href="/docs/">ホーム</a>

</li>

<li>
<details class="nav-section" open>
<summary><a href="/docs/guide/">ガイド</a></summary>

<ul>

<li class="active">
<a href="/docs/guide/getting-started/" aria-current="page">はじめに</a>

</li>

</ul>

</details>
</li>

</ul>

</nav>
</aside>

<script data-base="/docs/">
(function () {
  var sidebar = document.getElementById("site-sidebar");
  if (!sidebar) return;
  // 同一オリジンに複数の yuzu サイトが並ぶ場合（GitHub Pages のサブパス配下など）に
  // 衝突しないよう base_url で名前空間を切る。タブ内で完結させたいので sessionStorage
  var base = (document.currentScript && document.currentScript.dataset.base) || "/";
  var key = "yuzu-sidebar-scroll:" + base;

  // 狭幅では sidebar が position: static / display: none になり独立スクロールしない。
  // メディアクエリではなく実測で判定する（テーマ CSS を上書きされても追随する）
  function scrollable() {
    return sidebar.scrollHeight > sidebar.clientHeight;
  }

  function save() {
    if (!scrollable()) return; // 狭幅の 0 で広幅の値を潰さない
    try {
      sessionStorage.setItem(key, String(sidebar.scrollTop));
    } catch (e) {
      /* プライベートブラウジング等では保存しない */
    }
  }

  // 現在ページの項目がはみ出しているときだけ最小限寄せる（scrollspy.js の keepVisible と同じ）。
  // サイドバーのリンクから来た場合は可視域内なので動かず、復元位置がそのまま残る。
  // a は display:block、offsetParent は position:sticky な .sidebar（狭幅では外れるので弾く）。
  // active は現在ページ自身にだけ付く。子持ちノードが現在ページのときは
  // details/summary の配下にリンクが移るため、両方のマークアップを引く
  function keepActiveVisible() {
    var a = sidebar.querySelector("li.active > a, li.active > details > summary > a");
    if (!a || a.offsetParent !== sidebar) return;
    var margin = 8;
    var top = a.offsetTop;
    var bottom = top + a.offsetHeight;
    if (top < sidebar.scrollTop + margin) {
      sidebar.scrollTop = top - margin;
    } else if (bottom > sidebar.scrollTop + sidebar.clientHeight - margin) {
      sidebar.scrollTop = bottom - sidebar.clientHeight + margin;
    }
  }

  if (scrollable()) {
    var saved = NaN;
    try {
      saved = parseInt(sessionStorage.getItem(key), 10);
    } catch (e) {}
    if (saved > 0) sidebar.scrollTop = saved;
    keepActiveVisible();
  }

  var timer = null;
  sidebar.addEventListener(
    "scroll",
    function () {
      clearTimeout(timer);
      timer = setTimeout(save, 200);
    },
    { passive: true }
  );
  // 遷移直前の確定保存。beforeunload はモバイル Safari で発火が不安定なため使わない。
  // bfcache 復帰時はブラウザが scrollTop ごと復元するので pageshow では何もしない
  window.addEventListener("pagehide", save);
  document.addEventListener("visibilitychange", function () {
    if (document.visibilityState === "hidden") save();
  });
})();
</script>
<main class="content" id="yuzu-main">


<details class="toc-mobile">
<summary>目次</summary>
<nav aria-label="このページの目次">

<ul>

<li class="toc-level-2"><a href="#インストール">インストール</a>
</li>

<li class="toc-level-2"><a href="#使い方">使い方</a>

<ul>

<li class="toc-level-3"><a href="#詳細">詳細</a>
</li>

</ul>

</li>

</ul>

</nav>
</details>


<nav class="breadcrumb" aria-label="現在位置">
<ol>
<li><a href="/docs/">ホーム</a></li>
<li><a href="/docs/guide/">ガイド</a></li>
<li><span class="breadcrumb-current" aria-current="page">はじめに</span></li>
</ol>
</nav>

<p class="page-reading">約 1 分で読めます（68 文字）</p>
<article class="markdown-body" data-md-url="/docs/guide/getting-started.md">
<h1 id="はじめに">はじめに<a class="anchor" href="#はじめに" aria-label="「はじめに」へのリンク"></a></h1>
<h2 id="インストール">インストール<a class="anchor" href="#インストール" aria-label="「インストール」へのリンク"></a></h2>
<pre class="highlight" data-lang="rust"><code class="language-rust"><span class="line"><span class="yz-source yz-rust"><span class="yz-meta yz-function yz-rust"><span class="yz-meta yz-function yz-rust"><span class="yz-storage yz-type yz-function yz-rust">fn</span> </span><span class="yz-entity yz-name yz-function yz-rust">main</span></span><span class="yz-meta yz-function yz-rust"><span class="yz-meta yz-function yz-parameters yz-rust"><span class="yz-punctuation yz-section yz-parameters yz-begin yz-rust">(</span></span><span class="yz-meta yz-function yz-rust"><span class="yz-meta yz-function yz-parameters yz-rust"><span class="yz-punctuation yz-section yz-parameters yz-end yz-rust">)</span></span></span></span><span class="yz-meta yz-function yz-rust"> </span><span class="yz-meta yz-function yz-rust"><span class="yz-meta yz-block yz-rust"><span class="yz-punctuation yz-section yz-block yz-begin yz-rust">{</span></span></span></span>
</span><span class="line"><span class="yz-source yz-rust"><span class="yz-meta yz-function yz-rust"><span class="yz-meta yz-block yz-rust">    <span class="yz-support yz-macro yz-rust">println!</span><span class="yz-meta yz-group yz-rust"><span class="yz-punctuation yz-section yz-group yz-begin yz-rust">(</span></span><span class="yz-meta yz-group yz-rust"><span class="yz-string yz-quoted yz-double yz-rust"><span class="yz-punctuation yz-definition yz-string yz-begin yz-rust">&quot;</span>こんにちは yuzu<span class="yz-punctuation yz-definition yz-string yz-end yz-rust">&quot;</span></span></span><span class="yz-meta yz-group yz-rust"><span class="yz-punctuation yz-section yz-group yz-end yz-rust">)</span></span><span class="yz-punctuation yz-terminator yz-rust">;</span></span></span></span>
</span><span class="line"><span class="yz-source yz-rust"><span class="yz-meta yz-function yz-rust"><span class="yz-meta yz-block yz-rust"></span><span class="yz-meta yz-block yz-rust"><span class="yz-punctuation yz-section yz-block yz-end yz-rust">}</span></span></span></span>
</span></code></pre>
<h2 id="使い方">使い方<a class="anchor" href="#使い方" aria-label="「使い方」へのリンク"></a></h2>
<p><a href="/docs/">ホームへ戻る</a></p>
<h3 id="詳細">詳細<a class="anchor" href="#詳細" aria-label="「詳細」へのリンク"></a></h3>
<p>本文。</p>
<h4 id="補足">補足<a class="anchor" href="#補足" aria-label="「補足」へのリンク"></a></h4>
<p>h4 は既定の TOC（2-3）には載らない。<code>theme.toc.levels</code> の検証用。</p>

</article>
<nav class="pager" aria-label="前後のページ">
<a class="pager-prev" rel="prev" href="/docs/guide/"><span class="pager-dir">前のページ</span><span class="pager-title">ガイド</span></a>
</nav>


</main>


<aside class="toc">
<nav aria-label="このページの目次">
<div class="toc-title">目次</div>

<ul>

<li class="toc-level-2"><a href="#インストール">インストール</a>
</li>

<li class="toc-level-2"><a href="#使い方">使い方</a>

<ul>

<li class="toc-level-3"><a href="#詳細">詳細</a>
</li>

</ul>

</li>

</ul>

</nav>
</aside>
</div>
<script src="/docs/_assets/js/theme.js"></script>
<script src="/docs/_assets/js/nav.js"></script>
<script src="/docs/_assets/js/scrollspy.js"></script>
<script src="/docs/_assets/js/copy-button.js"></script>
<script src="/docs/_assets/js/page-copy.js"></script>
<script src="/docs/_assets/js/details-target.js"></script>
<script src="/docs/_assets/vendor/mermaid.min.js"></script>
<script src="/docs/_assets/js/mermaid-init.js"></script>
<script type="module" src="/docs/_assets/js/search-ui.js" data-search-base="/docs/_search/" data-base="/docs/"></script>
</body>
</html>
