crates/yuzu-render/tests/snapshots/render_snapshot__llms_txt.snap
---
source: crates/yuzu-render/tests/render_snapshot.rs
expression: llms
---
# Fixture Docs

> yuzu-render のテスト用サイト

## Docs

- [ホーム](/docs/index.md): フィクスチャのトップページ

## ガイド

- [ガイド](/docs/guide.md)
- [はじめに](/docs/guide/getting-started.md)
